--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "skew/nd_array"]
+	path = skew/nd_array
+	url = https://github.com/kwatme/nd_array
 [submodule "skew/support"]
 	path = skew/support
 	url = https://github.com/kwatme/support
