--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "skew/support"]
 	path = skew/support
-	url = https://github.com/kwatme/support
+	url = https://github.com/KwatME/support
 [submodule "skew/nd_array"]
 	path = skew/nd_array
-	url = https://github.com/kwatme/nd_array
+	url = https://github.com/KwatME/nd_array
 [submodule "skew/plot"]
 	path = skew/plot
-	url = https://github.com/kwatme/plot
+	url = https://github.com/KwatME/plot
